workshop/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress-<naam>
  namespace: backend-workshop
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-web-<naam>.k8s.eom.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo-service-<naam>
            port:
              number: 80
